<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="50dp"
    tools:context="v.metrobat.front.Fragment.NewItemFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/itemInfoIcon"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_weight="1"
            android:src="@drawable/ic_info_black_24dp"
            android:tint="@color/colorSecondaryDark" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_kind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/editTextKind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/tipusobjecte"
                android:textColorHint="@color/colorSecondaryDark"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/transportIcon"
            android:layout_width="63dp"
            android:layout_height="39dp"
            android:layout_weight="1"
            android:src="@drawable/ic_directions_subway_black_24dp"
            android:tint="@color/colorSecondaryDark" />

        <Spinner
            android:id="@+id/transportSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <Spinner
            android:id="@+id/lineSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/calendarIcon"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_weight="1"
            android:src="@drawable/ic_today_black_24dp"
            android:tint="@color/colorSecondaryDark" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/date"
                android:textColorHint="@color/colorSecondaryDark"
                android:inputType="date" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/hourIcon"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_weight="1"
            android:src="@drawable/ic_access_time_black_24dp"
            android:tint="@color/colorSecondaryDark" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/edtTextTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hora"
                android:textColorHint="@color/colorSecondaryDark"
                android:inputType="time" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/description"
                android:textColorHint="@color/colorSecondaryDark"
                android:ems="10"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center">


        <Button
            android:id="@+id/publicaBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publica" />
    </LinearLayout>

</LinearLayout>
